:fix: fixed BEM CSS naming

--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -31,7 +31,7 @@
       <a href="index.html" class="header-back--a">
         <i class="header-i-back--i fa-solid fa-arrow-left"></i>
       </a>
-      <img class="header--img" src="../assets/logo/ohmyfood.png" />
+      <img class="header-img" src="../assets/logo/ohmyfood.png" />
     </header>
     <main>
       <!--
@@ -46,12 +46,12 @@
 
     -->
     <footer>
-      <h1 class="footer-title--h1">ohmyfood</h1>
-      <ul class="footer-links-list--ul">
-        <li class="footer-links-list--li"><i class="footer-icon--i fa-solid fa-utensils"></i>Poposer un restaurant</li>
-        <li class="footer-links-list--li"><i class="footer-icon--i fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-        <li class="footer-links-list--li">Mentions légales</li>
-        <li class="footer-links-list--li">Contact</li>
+      <h1 class="footer-title-h1">ohmyfood</h1>
+      <ul class="footer-links-list-ul">
+        <li class="footer-links-list-li"><i class="footer-icon--i fa-solid fa-utensils"></i>Poposer un restaurant</li>
+        <li class="footer-links-list-li"><i class="footer-icon--i fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+        <li class="footer-links-list-li">Mentions légales</li>
+        <li class="footer-links-list-li">Contact</li>
       </ul>
     </footer>
   </body>
