--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -28,28 +28,28 @@
 
     -->
     <header class="header">
-      <a href="../index.html" class="header-back--a">
-        <i class="header-back--i fa-solid fa-arrow-left"></i>
+      <a href="../index.html" class="header-back-a">
+        <i class="header-back-i fa-solid fa-arrow-left"></i>
       </a>
-      <img class="header--img" src="../assets/logo/ohmyfood.png" />
+      <img class="header-img" src="../assets/logo/ohmyfood.png" />
     </header>
     <main>
       <!--
 
-            Restaurant menu
+            Restaurant menu "" entrées ""
 
       -->
       <section class="menu">
-        <img class="section-menu--img" src="../assets/restaurants/4.jpg" alt="Image de nourriture" />
+        <img class="section-menu-img" src="../assets/restaurants/4.jpg" alt="Image de nourriture" />
         <div class="menu-card">
           <!--
 
             Restaurant title
 
           -->
-          <div class="menu-card-title--div">
-            <h2 class="menu-card-title--h2">Le délices des sens</h2>
-            <i class="menu-card-heart-icon--i fa-regular fa-heart"></i>
+          <div class="menu-card-title-div">
+            <h2 class="menu-card-title-h2">Le délices des sens</h2>
+            <i class="menu-card-heart-icon-i fa-regular fa-heart"></i>
           </div> <!-- ./title -->
           <!--
               Restaurant menu category "" entrées ""
@@ -63,6 +63,8 @@
               Card #1 - Tartare de thon
 
           -->
+
+          <!-- First card part -->
           <div class="card-restaurant-container d-flex">
             <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
                         mrg-right-none radius-top-right-none radius-bottom-right-none">
@@ -71,11 +73,15 @@
                 Assaisonné de yuzu
               </p>
             </div> <!-- /.card -->
+
+            <!-- Second card part -->
             <div class="card card--restaurant-pdg card-price overall-restaurant-pres-margin mrg-left-none">
               <p class="card-price--p">20€</p>
             </div> <!-- /.card .card-price -->
+
+            <!-- Third card part -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin mrg-left-none">
-              <i class="card-restaurant-check--i fa-sharp fa-solid fa-circle-check"></i>
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
             </div> <!--/.card .card-hovered-area -->
           </div> <!-- ./card-restaurant-container card-flex -->
           <!--
@@ -95,7 +101,7 @@
               <p class="card-price--p">25€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin mrg-left-none">
-              <i class="card-restaurant-check--i fa-sharp fa-solid fa-circle-check"></i>
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
             </div> <!--/.card .card-hovered-area -->
           </div> <!-- ./card-restaurant-container card-flex -->
           <!--
@@ -115,10 +121,15 @@
               <p class="card-price--p">35€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin mrg-left-none">
-              <i class="card-restaurant-check--i fa-sharp fa-solid fa-circle-check"></i>
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
             </div> <!--/.card .card-hovered-area -->
           </div> <!-- ./card-restaurant-container card-flex -->
         </div> <!-- /.menu-card -->
+        <!--
+
+              Restaurant menu "" plats ""
+
+        -->
       </section> <!-- /.menu -->
     </main>
     <!--
@@ -127,12 +138,12 @@
 
     -->
     <footer class="footer--restaurants-pages">
-      <h1 class="footer-title--h1">ohmyfood</h1>
-      <ul class="footer-links-list--ul">
-        <li class="footer-links-list--li"><i class="footer-icon--i fa-solid fa-utensils"></i>Poposer un restaurant</li>
-        <li class="footer-links-list--li"><i class="footer-icon--i fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-        <li class="footer-links-list--li">Mentions légales</li>
-        <li class="footer-links-list--li">Contact</li>
+      <h1 class="footer-title-h1">ohmyfood</h1>
+      <ul class="footer-links-list-ul">
+        <li class="footer-links-list-li"><i class="footer-icon-i fa-solid fa-utensils"></i>Poposer un restaurant</li>
+        <li class="footer-links-list-li"><i class="footer-icon-i fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+        <li class="footer-links-list-li">Mentions légales</li>
+        <li class="footer-links-list-li">Contact</li>
       </ul>
     </footer>
   </body>
