--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <i class="head-location--i fa-solid fa-location-dot"></i>Paris, Belleville
         </div> <!-- /.head-location -->
         <div class="head-title mrg-top-none">
-          <h2 class="head-title--h2">Réservez le menu qui vous convient</h2>
+          <h2 class="head-title-h2">Réservez le menu qui vous convient</h2>
           <p class="head-subtitle--p pdg">
             Découvrez des restaurants d'exception, séléctionnés par nos soins.
           </p> <!-- /head-subtitle-p -->
@@ -195,12 +195,12 @@
 
     -->
     <footer>
-      <h1 class="footer-title--h1">ohmyfood</h1>
-      <ul class="footer-links-list--ul">
-        <li class="footer-links-list--li"><i class="footer-icon--i fa-solid fa-utensils"></i>Poposer un restaurant</li>
-        <li class="footer-links-list--li"><i class="footer-icon--i fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-        <li class="footer-links-list--li">Mentions légales</li>
-        <li class="footer-links-list--li">Contact</li>
+      <h1 class="footer-title-h1">ohmyfood</h1>
+      <ul class="footer-links-list-ul">
+        <li class="footer-links-list-li"><i class="footer-icon-i fa-solid fa-utensils"></i>Poposer un restaurant</li>
+        <li class="footer-links-list-li"><i class="footer-icon-i fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+        <li class="footer-links-list-li">Mentions légales</li>
+        <li class="footer-links-list-li">Contact</li>
       </ul>
     </footer>
   </body>
