:fix: added a comment that explain the restaurants menu cards tricky part

--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -58,10 +58,16 @@
             Entrées
             <div class="menu-card-categ-line--div overall-restaurant-pres-margin"></div>
           </p> <!-- /.subtitle -->
+
           <!--
 
               Card #1 - Tartare de thon
 
+                @NOTE: To implement the hovering animation, we need to break the
+                       menu card into three parts. The two first part are displayed
+                       default. The third one is hidden. On `card_restaurant'
+                       hovering, the first two card spacing is reduced, to display
+                       the third one, with the green background & the check icon.
           -->
 
           <!-- First card part -->
