:fix: fixed BEM syntax

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     -->
     <header class="header">
-      <img class="header--img" src="assets/logo/ohmyfood.png" />
+      <img class="header-img" src="assets/logo/ohmyfood.png" />
     </header>
     <main>
       <!--
@@ -43,11 +43,11 @@
       -->
       <section class="head bg-light-alt">
         <div class="head-location bg-light">
-            <i class="head-location--i fa-solid fa-location-dot"></i>Paris, Belleville
+            <i class="head-location-i fa-solid fa-location-dot"></i>Paris, Belleville
         </div> <!-- /.head-location -->
         <div class="head-title mrg-top-none">
           <h2 class="head-title-h2">Réservez le menu qui vous convient</h2>
-          <p class="head-subtitle--p pdg">
+          <p class="head-subtitle-p pdg">
             Découvrez des restaurants d'exception, séléctionnés par nos soins.
           </p> <!-- /head-subtitle-p -->
         </div> <!-- /.head-title -->
@@ -55,7 +55,7 @@
             Explore button
         -->
         <p class="explore-btn-container">
-          <a class="explore-btn">Explorer nos restaurants</a>
+          <a class="explore-btn-a">Explorer nos restaurants</a>
         </p> <!-- /explore-btn-container -->
       </section> <!-- /.head -->
       <!--
