--- a/restaurants/la_note_enchantee.html
+++ b/restaurants/la_note_enchantee.html
@@ -29,7 +29,7 @@
     -->
     <header class="header">
       <a href="index.html" class="header-back--a">
-        <i class="header-i-back--i fa-solid fa-arrow-left"></i>
+        <i class="header-back-i fa-solid fa-arrow-left"></i>
       </a>
       <img class="header-img" src="../assets/logo/ohmyfood.png" />
     </header>
