:feat: delice_des_sens.html page structure completed

--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -41,7 +41,7 @@
       -->
       <section class="menu">
         <img class="section-menu-img" src="../assets/restaurants/4.jpg" alt="Image de nourriture" />
-        <div class="menu-card">
+        <div class="menu-container">
           <!--
 
             Restaurant title
@@ -54,10 +54,10 @@
           <!--
               Restaurant menu category "" entrées ""
           -->
-          <p class="menu-card-category overall-restaurant-pres-margin">
+          <div class="menu-card-category-div overall-restaurant-pres-margin">
             Entrées
-            <div class="menu-card-categ-line--div overall-restaurant-pres-margin"></div>
-          </p> <!-- /.subtitle -->
+            <div class="menu-card-categ-line-div overall-restaurant-pres-margin"></div>
+          </div> <!-- /.menu-card-category-div -->
 
           <!--
 
@@ -73,7 +73,7 @@
           <!-- First card part -->
           <div class="card-restaurant-container d-flex">
             <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        mrg-right-none radius-top-right-none radius-bottom-right-none">
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
               <h3 class="card-title-h3">Tartare de thon</h3>
               <p class="card-description">
                 Assaisonné de yuzu
@@ -81,12 +81,12 @@
             </div> <!-- /.card -->
 
             <!-- Second card part -->
-            <div class="card card--restaurant-pdg card-price overall-restaurant-pres-margin mrg-left-none">
-              <p class="card-price--p">20€</p>
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">20€</p>
             </div> <!-- /.card .card-price -->
 
             <!-- Third card part -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin mrg-left-none">
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
             </div> <!--/.card .card-hovered-area -->
           </div> <!-- ./card-restaurant-container card-flex -->
@@ -97,16 +97,16 @@
           -->
           <div class="card-restaurant-container d-flex">
             <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        mrg-right-none radius-top-right-none radius-bottom-right-none">
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
               <h3 class="card-title-h3">Bouchée de homard croustillant</h3>
               <p class="card-description">
                 Et sa farandole de petits légumes
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card-price overall-restaurant-pres-margin mrg-left-none">
-              <p class="card-price--p">25€</p>
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">25€</p>
             </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin mrg-left-none">
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
             </div> <!--/.card .card-hovered-area -->
           </div> <!-- ./card-restaurant-container card-flex -->
@@ -115,27 +115,179 @@
               Card #3 - Velouté de cèpes
 
           -->
-          <div class="card-restaurant-container d-flex">
+          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
             <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        mrg-right-none radius-top-right-none radius-bottom-right-none">
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
               <h3 class="card-title-h3">Velouté de cèpes</h3>
               <p class="card-description">
                 Aux truffes
               </p>
             </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card-price overall-restaurant-pres-margin mrg-left-none">
-              <p class="card-price--p">35€</p>
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">35€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+
+          <!--
+
+                Restaurant menu "" plats ""
+
+          -->
+          <div class="menu-card-category-div overall-restaurant-pres-margin">
+            Plats
+            <div class="menu-card-categ-line-div overall-restaurant-pres-margin"></div>
+          </div> <!-- /.menu-card-category-div -->
+
+          <!--
+
+              Card #1 - Poulet rôti aux herbes de provence
+
+          -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Poulet rôti aux herbes de provence</h3>
+              <p class="card-description">
+                Et sa crême de truffe
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">40€</p>
             </div> <!-- /.card .card-price -->
             <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
             </div> <!--/.card .card-hovered-area -->
           </div> <!-- ./card-restaurant-container card-flex -->
-        </div> <!-- /.menu-card -->
-        <!--
 
-              Restaurant menu "" plats ""
+          <!--
 
-        -->
+              Card #2 - Langoustine rôtie
+
+          -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Langoustine rôtie</h3>
+              <p class="card-description">
+                Et ses légumes de saison
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">35€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+              Card #3 - Côte de boeuf angus
+
+          -->
+          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Côte de boeuf angus</h3>
+              <p class="card-description">
+                Et sa purée de panais
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">35€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+                Restaurant menu "" desserts ""
+
+          -->
+          <div class="menu-card-category-div overall-restaurant-pres-margin">
+            Desserts
+            <div class="menu-card-categ-line-div overall-restaurant-pres-margin"></div>
+          </div> <!-- /.menu-card-category-div -->
+
+
+          <!--
+
+              Card #1 - Farandole de desserts
+
+          -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Farandole de desserts</h3>
+              <p class="card-description">
+                Du chef
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">18€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+              Card #2 - Crême brulée
+
+          -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Crême brûlée</h3>
+              <p class="card-description">
+                Revisitée
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">22€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+              Card #3 - Tiramisu
+
+          -->
+          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Tiramisu</h3>
+              <p class="card-description">
+                A la noisette
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">23€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+              Buy button
+          -->
+          <p class="action-button-container">
+            <a class="action-button-container-a">Commander</a>
+          </p> <!-- /explore-btn-container -->
+
+        </div> <!-- /.menu-container -->
+
       </section> <!-- /.menu -->
     </main>
     <!--
