--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Roboto font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- Project logo font -->
@@ -54,8 +53,8 @@
         <!--
             Explore button
         -->
-        <p class="explore-btn-container">
-          <a class="explore-btn-a">Explorer nos restaurants</a>
+        <p class="action-button-container">
+          <a class="action-button-container-a">Explorer nos restaurants</a>
         </p> <!-- /explore-btn-container -->
       </section> <!-- /.head -->
       <!--
