:fix: delice_des_sens.html text-overflow

--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -156,9 +156,9 @@
               </p>
             </div> <!-- /.card -->
             <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">40€</p>
+              <p class="card-price-p">25€</p>
             </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin mrg-left-none">
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
             </div> <!--/.card .card-hovered-area -->
           </div> <!-- ./card-restaurant-container card-flex -->
