:nothing: renaming files

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <section class="restaurant">
           <div class="card card-restaurant">
             <div class="new">Nouveau</div>
-            <img src="assets/restaurants/1.jpg" />
+            <img src="assets/restaurants/la_palette_du_gout.jpg" />
             <div class="flex">
               <div>
                 <h3>
@@ -128,7 +128,7 @@
         <section class="restaurant">
           <div class="card card-restaurant">
             <div class="new">Nouveau</div>
-            <img src="assets/restaurants/2.jpg" />
+            <img src="assets/restaurants/la_note_enchantee.jpg" />
             <div class="flex">
               <div>
                 <h3>
@@ -149,7 +149,7 @@
         -->
         <section class="restaurant">
           <div class="card card-restaurant">
-            <img src="assets/restaurants/3.jpg" />
+            <img src="assets/restaurants/a_la_francaise.jpg" />
             <div class="flex">
               <div>
                 <h3>
@@ -170,7 +170,7 @@
         -->
         <section class="restaurant">
           <div class="card card-restaurant">
-            <img src="assets/restaurants/4.jpg" />
+            <img src="assets/restaurants/le_delice_des_sens.jpg" />
             <div class="flex">
               <div>
                 <h3>
