--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -34,13 +34,8 @@
       <img class="header-img" src="../assets/logo/ohmyfood.png" />
     </header>
     <main>
-      <!--
-
-            Restaurant menu "" entrées ""
-
-      -->
       <section class="menu">
-        <img class="section-menu-img" src="../assets/restaurants/4.jpg" alt="Image de nourriture" />
+        <img class="section-menu-img" src="../assets/restaurants/le_delice_des_sens.jpg" alt="Image de nourriture" />
         <div class="menu-container">
           <!--
 
@@ -50,9 +45,11 @@
           <div class="menu-card-title-div">
             <h2 class="menu-card-title-h2">Le délices des sens</h2>
             <i class="menu-card-heart-icon-i fa-regular fa-heart"></i>
-          </div> <!-- ./title -->
+          </div> <!-- ./menu-card-title-div -->
           <!--
+
               Restaurant menu category "" entrées ""
+
           -->
           <div class="menu-card-category-div overall-restaurant-pres-margin">
             Entrées
