--- a/restaurants/la_note_enchantee.html
+++ b/restaurants/la_note_enchantee.html
@@ -28,7 +28,7 @@
 
     -->
     <header class="header">
-      <a href="index.html" class="header-back--a">
+      <a href="../index.html" class="header-back--a">
         <i class="header-back-i fa-solid fa-arrow-left"></i>
       </a>
       <img class="header-img" src="../assets/logo/ohmyfood.png" />
