--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -77,13 +77,13 @@
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
               <h3 class="card-title-h3">Tartare de poulpe acidulé</h3>
               <p class="card-description">
-                Assaisonné de yuzu
+                Aux zests d'orange
               </p>
             </div> <!-- /.card -->
 
             <!-- Second card part -->
             <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">20€</p>
+              <p class="card-price-p">25€</p>
             </div> <!-- /.card .card-price -->
 
             <!-- Third card part -->
@@ -93,7 +93,7 @@
           </div> <!-- ./card-restaurant-container card-flex -->
           <!--
 
-              Card #2 - Bouchée de homard croustillant
+              Card #2 - Velouté de légumes d'antan
 
           -->
           <div class="card-restaurant-container d-flex">
@@ -101,27 +101,7 @@
                         restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
               <h3 class="card-title-h3">Bouchée de homard croustillant</h3>
               <p class="card-description">
-                Et sa farandole de petits légumes
-              </p>
-            </div> <!-- /.card -->
-            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <p class="card-price-p">25€</p>
-            </div> <!-- /.card .card-price -->
-            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
-              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-            </div> <!--/.card .card-hovered-area -->
-          </div> <!-- ./card-restaurant-container card-flex -->
-          <!--
-
-              Card #3 - Velouté de cèpes
-
-          -->
-          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
-            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
-                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
-              <h3 class="card-title-h3">Velouté de cèpes</h3>
-              <p class="card-description">
-                Aux truffes
+                Carrote, panais, topinambour
               </p>
             </div> <!-- /.card -->
             <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
@@ -131,6 +111,181 @@
               <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
             </div> <!--/.card .card-hovered-area -->
           </div> <!-- ./card-restaurant-container card-flex -->
+          <!--
+
+              Card #3 - Soupe à l'oignon
+
+          -->
+          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Soupe à l'oignon</h3>
+              <p class="card-description">
+                Revisitée
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">20€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+                Restaurant menu "" plats ""
+
+          -->
+          <div class="menu-card-category-div overall-restaurant-pres-margin">
+            Plats
+            <div class="menu-card-categ-line-div overall-restaurant-pres-margin"></div>
+          </div> <!-- /.menu-card-category-div -->
+
+          <!--
+
+              Card #1 - Coquilles Saint-Jacques
+
+          -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Coquilles Saint-Jacques</h3>
+              <p class="card-description">
+                Accompagnées d'une purée de panais
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">25€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+              Card #2 - Magret de canard
+
+          -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Magret de canard</h3>
+              <p class="card-description">
+                Et parmentier de pommes de terres
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">35€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+              Card #3 - Pigeonneau d'Ile-et-Vilaine
+
+          -->
+          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Pigeonneau d'Ile-et-Vilaine</h3>
+              <p class="card-description">
+                Sur son lit de gnocchis aux légumes
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">44€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+                Restaurant menu "" desserts ""
+
+          -->
+          <div class="menu-card-category-div overall-restaurant-pres-margin">
+            Desserts
+            <div class="menu-card-categ-line-div overall-restaurant-pres-margin"></div>
+          </div> <!-- /.menu-card-category-div -->
+
+
+          <!--
+
+              Card #1  - Pétales de violettes glaçées
+
+          -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Pétales de violettes glaçées</h3>
+              <p class="card-description">
+                Et purée de noisettes
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">18€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+              Card #2 - Fondant au chocolat
+
+          -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Fondant au chocolat</h3>
+              <p class="card-description">
+                Revisité
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">22€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+              Card #3 - Tiramisu
+
+          -->
+          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Tiramisu</h3>
+              <p class="card-description">
+                Myrtilles et pâte d'amande
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">23€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+              Buy button
+          -->
+          <p class="action-button-container">
+            <a class="action-button-container-a">Commander</a>
+          </p> <!-- /explore-btn-container -->
+
       </section> <!-- /.menu -->
     </main>
     <!--
