--- a/restaurants/la_note_enchantee.html
+++ b/restaurants/la_note_enchantee.html
@@ -28,17 +28,20 @@
 
     -->
     <header class="header">
-      <a href="../index.html" class="header-back--a">
+      <a href="../index.html" class="header-back-a">
         <i class="header-back-i fa-solid fa-arrow-left"></i>
       </a>
       <img class="header-img" src="../assets/logo/ohmyfood.png" />
     </header>
     <main>
-      <!--
+      <section class="menu">
+        <img class="section-menu-img" src="../assets/restaurants/le_delice_des_sens.jpg" alt="Image de nourriture" />
+        <div class="menu-container">
+        <!--
 
-            Restaurant menu
+              Restaurant menu
 
-      -->
+        -->
     </main>
     <!--
 
