--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -28,17 +28,264 @@
 
     -->
     <header class="header">
-      <a href="index.html" class="header-back--a">
-        <i class="header-i-back--i fa-solid fa-arrow-left"></i>
+      <a href="index.html" class="header-back-a">
+        <i class="header-back-i fa-solid fa-arrow-left"></i>
       </a>
       <img class="header-img" src="../assets/logo/ohmyfood.png" />
     </header>
     <main>
-      <!--
+      <main>
+        <section class="menu">
+          <img class="section-menu-img" src="../assets/restaurants/la_palette_du_gout.jpg" alt="Image de nourriture" />
+          <div class="menu-container">
+          <!--
 
-            Restaurant menu
+                Restaurant menu
 
-      -->
+          -->
+          <div class="menu-card-title-div">
+            <h2 class="menu-card-title-h2">La note enchantée</h2>
+            <i class="menu-card-heart-icon-i fa-regular fa-heart"></i>
+          </div> <!-- ./menu-card-title-div -->
+          <!--
+
+              Restaurant menu category "" entrées ""
+
+          -->
+          <div class="menu-card-category-div overall-restaurant-pres-margin">
+            Entrées
+            <div class="menu-card-categ-line-div overall-restaurant-pres-margin"></div>
+          </div> <!-- /.menu-card-category-div -->
+
+          <!--
+
+              Card #1 - Fricassée d'escargot
+
+                @NOTE: To implement the hovering animation, we need to break the
+                       menu card into three parts. The two first part are displayed
+                       default. The third one is hidden. On `card_restaurant'
+                       hovering, the first two card spacing is reduced, to display
+                       the third one, with the green background & the check icon.
+          -->
+
+          <!-- First card part -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Fricassée d'escargot</h3>
+              <p class="card-description">
+                Au piment d'espelette
+              </p>
+            </div> <!-- /.card -->
+
+            <!-- Second card part -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">25€</p>
+            </div> <!-- /.card .card-price -->
+
+            <!-- Third card part -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+              Card #2 - Foie gras de canard mi-cuit
+
+          -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Foie gras de canard mi-cuit</h3>
+              <p class="card-description">
+                Et ses copeaux de truffe noire
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">35€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+              Card #3 - Oeuf au plat
+
+          -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Oeuf au plat</h3>
+              <p class="card-description">
+                Assaisonné à la truffe sur lit de crême
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">20€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+              Restaurant menu category "" plats ""
+
+          -->
+          <div class="menu-card-category-div overall-restaurant-pres-margin">
+            Plats
+            <div class="menu-card-categ-line-div overall-restaurant-pres-margin"></div>
+          </div> <!-- /.menu-card-category-div -->
+
+          <!--
+
+              Card #1 - Filet de boeuf aux herbes
+
+          -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Filet de beauf aux herbes</h3>
+              <p class="card-description">
+                Accompagné de sa ribambelle de légumes
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">20€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+              Card #2 - Parmentier de queue de boeuf
+
+          -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Parmentier de queue de boeuf</h3>
+              <p class="card-description">
+                Accompagné de sa ribambelle de légumes
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">20€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+              Card #3 - Filet de turbot
+
+          -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Filet de Turbot</h3>
+              <p class="card-description">
+                Aux agrumes
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">44€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+              Restaurant menu category "" Desserts ""
+
+          -->
+          <div class="menu-card-category-div overall-restaurant-pres-margin">
+            Desserts
+            <div class="menu-card-categ-line-div overall-restaurant-pres-margin"></div>
+          </div> <!-- /.menu-card-category-div -->
+
+
+          <!--
+
+              Card #1 - Paris-Brest
+
+          -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Paris-Brest</h3>
+              <p class="card-description">
+                Revisité
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">18€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+              Card #2 - Macaron
+
+          -->
+          <div class="card-restaurant-container d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Macaron au chocolat d'exception</h3>
+              <p class="card-description">
+                Et glâce à la vanille de Madagascar
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">18€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+
+              Card #3 - Macaron
+
+          -->
+          <div class="card-restaurant-container card--restaurant-mrg-btm d-flex">
+            <div class="card card-restaurant card--restaurant-left card--restaurant-pdg overall-restaurant-pres-margin
+                        restaurants-cards-margin mrg-right-none radius-top-right-none radius-bottom-right-none">
+              <h3 class="card-title-h3">Mousse au chocolat</h3>
+              <p class="card-description">
+                Au piment d'espelette et à la truffe noire
+              </p>
+            </div> <!-- /.card -->
+            <div class="card card--restaurant-pdg card--price overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <p class="card-price-p">23€</p>
+            </div> <!-- /.card .card-price -->
+            <div class="card card--restaurant-pdg card-hovered-area d-none overall-restaurant-pres-margin restaurants-cards-margin mrg-left-none">
+              <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+            </div> <!--/.card .card-hovered-area -->
+          </div> <!-- ./card-restaurant-container card-flex -->
+
+          <!--
+              Buy button
+          -->
+          <p class="action-button-container">
+            <a class="action-button-container-a">Commander</a>
+          </p> <!-- /explore-btn-container -->
+
+        </section> <!-- /.menu -->
     </main>
     <!--
 
@@ -48,8 +295,8 @@
     <footer>
       <h1 class="footer-title-h1">ohmyfood</h1>
       <ul class="footer-links-list-ul">
-        <li class="footer-links-list-li"><i class="footer-icon--i fa-solid fa-utensils"></i>Poposer un restaurant</li>
-        <li class="footer-links-list-li"><i class="footer-icon--i fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+        <li class="footer-links-list-li"><i class="footer-icon-i fa-solid fa-utensils"></i>Poposer un restaurant</li>
+        <li class="footer-links-list-li"><i class="footer-icon-i fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
         <li class="footer-links-list-li">Mentions légales</li>
         <li class="footer-links-list-li">Contact</li>
       </ul>
