:fix: fixed page h2

--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -44,7 +44,7 @@
 
           -->
           <div class="menu-card-title-div">
-            <h2 class="menu-card-title-h2">La note enchantée</h2>
+            <h2 class="menu-card-title-h2">La palette du gout</h2>
             <i class="menu-card-heart-icon-i fa-regular fa-heart"></i>
           </div> <!-- ./menu-card-title-div -->
           <!--
