--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>OhMyFood</title>
+    <title>OhMyFood - A la française </title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- normalize.css -->
