--- a/restaurants/le_delice_des_sens.html
+++ b/restaurants/le_delice_des_sens.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>OhMyFood</title>
+    <title>OhMyFood - Le délice des sens</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- normalize.css -->
